--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,7 @@ body {
 }
 
 .main-conent .inputForm {
+  border: 10px solid;
   width: 50%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
   background-color: rgba(0, 0, 0, 0.1);
@@ -161,6 +162,16 @@ body {
 }
 .table .amount-column {
   width: 30%;
+}
+.submit-btn {
+  margin-top: 10px;
+  padding: 5px 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--secondary);
+  color: white;
+  cursor: pointer;
 }
 @media (max-width: 786px) {
   .header {
