--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,14 @@ body {
   border-radius: 10px;
   margin-top: 20px;
 }
+
+.main-content .inputForm .form .select-option {
+  display: block;
+  border: none;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin: 10px 0px 10px 0px;
+}
 .table {
   width: 100%;
   color: white;
